RESOLVED FIXED283317
Invoking date picker controls with large values may cause crash
https://bugs.webkit.org/show_bug.cgi?id=283317
Summary Invoking date picker controls with large values may cause crash
Lily Spiniolas
Reported 2024-11-18 12:53:33 PST
Invoking date picker controls with values in the far future can cause crashes for certain input types.
Attachments
Lily Spiniolas
Comment 1 2024-11-18 12:54:08 PST
Lily Spiniolas
Comment 2 2024-11-18 12:56:24 PST
EWS
Comment 3 2024-11-18 19:25:20 PST
Committed 286777@main (7ec0f38dfd77): <https://commits.webkit.org/286777@main> Reviewed commits have been landed. Closing PR #36813 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.