[iOS] Invoking date picker controls with large values may cause crash https://bugs.webkit.org/show_bug.cgi?id=283317 rdar://135733092

Reviewed by Wenson Hsieh.

An explicit date interval is now applied to the UIDatePicker
or UICalendarView used for date-related input types. If the value
of the input is outside of this interval, invoking the control
will set the value of the input to current day.

* LayoutTests/fast/forms/ios/date-picker-value-crash-expected.txt: Added.
* LayoutTests/fast/forms/ios/date-picker-value-crash.html: Added.
* Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm:
(-[WKDateTimePicker initWithView:inputType:]):
(-[WKDateTimePicker setWeekPickerToInitialValue]):
(-[WKDateTimePicker setDateTimePickerToInitialValue]):

Canonical link: https://commits.webkit.org/286777@main